# customer-api-core

./: .dockerignore  .flake8  .sample.env  CHANGELOG.md  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  python.Dockerfile  start-reload.sh  startup.sh
migrations/: env.py
migrations/versions/: 0001_2024_04_12_1631_14__f17a2dbcd7f1_add_example_table.py
python_api_template/: __init__.py  dependencies.py  lifespan.py  main.py
python_api_template/common/: base_repository.py  base_service.py
python_api_template/common/api/api_v1/: api.py
python_api_template/common/api/api_v1/endpoints/: healthcheck.py  root.py
python_api_template/common/enums/: __init__.py  base_enum.py  health_check_status.py  sort.py
python_api_template/common/exceptions/: base_exception.py  enums.py  exception_handlers.py  exceptions.py
python_api_template/common/models/: base_model.py  timestamp_mixin_model.py  utils.py  uuid_mixin_model.py
python_api_template/common/parameters/: header_params.py  query_params.py
python_api_template/common/schemas/: __init__.py  api_token.py  error.py  health_check_v1.py  problem_details_v1.py  validation_problem_details_v1.py
python_api_template/example/: repository.py  service.py
python_api_template/example/api/api_v1/: api.py  dependencies.py
python_api_template/example/api/api_v1/endpoints/: example.py
python_api_template/example/enums/: __init__.py  example_sort_key.py  example_status.py
python_api_template/example/models/: __init__.py  example_model.py
python_api_template/example/schemas/: __init__.py  base_example.py  create_example.py  get_example.py
python_api_template/internal/: security.py
python_api_template/internal/config/: gunicorn.py  logger.py  settings.py  utils.py
python_api_template/internal/db/: __init__.py  database.py  utils.py
python_api_template/internal/decorators/: composite_decorator.py  decorator_metaclass.py  exception_decorator.py  logger_decorator.py  retry_decorator.py  timeit_decorator.py
python_api_template/internal/decorators/utils/: bind_arguments.py  format_func_and_args_name.py
python_api_template/internal/http/: client.py  decorators.py  utils.py
python_api_template/internal/utils/: pathutils.py
tests/: conftest.py  test_orm_works.py
tests/example/integration/: test_routers.py
tests/migrations/: conftest.py  test_migration_model_in_sync.py  test_stairway.py
